# workflows_automation

./: .gitignore  Azuredevops.md  Githubactions.md  Jenkinsfile  README.md  azure-pipelines-dab.yml  azure-pipelines-testcase.yml  azure-pipelines-tf.yml  buildspec.yml  dabdemo_notebook.py  databricks.yml  dbt_project.yml  generate-resources.sh  localSetup.md  packages.yml  profiles.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.azure/: azure-pipelines-dab.yml  azure-pipelines-testcase.yml  azure-pipelines-tf.yml
.github/workflows/: TerraformDeploymentCD.yml  TerraformDeploymentCI.yml  dabsDeploymentCD.yml  dabsDeploymentCI.yml  dabs_qa.yml  prod-dabsDeploymentCD.yml  test-dabsDeploymentCD.yml  testCase.yml  tf_qa.yml
dab_resources/: batch-inference-workflow-resource.yml  bundle_test_pipeline.yml  dbt_dab_wf_job.yml  dlt_dab_wf_job.yml  feature-engineering-workflow-resource.yml  ml-artifacts-resource.yml  model-workflow-resource.yml  serverless_wf.yml  variables.yml  wheel_wf_job.yml
databricks_notebooks/: DLT-ODS_tables.sql  DLT-WH_tables.sql  DLT-base_tables.sql  Initial_Setup.py  Security.py  Volume.py  dabdemo_notebook.py  notebook.ipynb  python_serverless_task.py
deployment/batch_inference/: predict.py
feature_engineering/features/: dropoff_features.py
feature_engineering/notebooks/: GenerateAndWriteFeatures.py
models/: sources.yml
models/ods/: customers.sql  orders_items.sql  parts_suppliers.sql
models/wh/: fct_orders.yml  fct_orders_items.sql  fct_orders_items.yml  rpt_pricing_summary.sql
src/: utils.py
(+41 files in other folders)
